--- a/index.html
+++ b/index.html
@@ -21,10 +21,23 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui numquam voluptas aperiam, debitis ut et,
                 consectetur quaerat animi commodi quod nobis impedit ab nam magni. Consectetur corporis dignissimos fuga ad?
             </p>
-            <a target= "blank" href="https://www.bracu.ac.bd" class="link-button">Hire Me</a>
+            <a target= "_blank" href="https://www.bracu.ac.bd" class="link-button">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/jhankar.png" alt="jhankar photo">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="jhankar photo2">
+        </div>
+
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi odio provident dolorem eligendi, perspiciatis libero officia nostrum. Labore delectus repudiandae earum consequuntur cupiditate laudantium pariatur quasi, blanditiis magnam commodi impedit tempore ipsa modi? Delectus vitae praesentium nobis quam ratione quia.</p>
+            <a target= "_blank" href="https://www.bracu.ac.bd" class="link-button">DOWNLOAD RESUME</a>
         </div>
     </section>
 </body>
